Ctrl LMB higher selection mode in edit mode sometimes selects extra elements #33142

Closed
opened 2012-11-11 16:28:17 +01:00 by Jason Fleming · 5 comments

%%%According to section "Selected elements after switching select mode" in http://wiki.blender.org/index.php/Doc:2.6/Manual/Modeling/Meshes/Selecting, Ctrl LMB on a selection mode (vertex, edge, face) button that is ascendent should select objects that are "touching" the selected object. While this does happen, sometimes extra objects are also selected. For instance, a cube vertex should only have three "touching" edges when ascending. However, selecting a vertex and pressing Ctrl LMB on the edge selection button will sometimes select more than three edges depending on which vertex was selected.

Steps to reproduce:

  1. Start default cube scene
  2. Tab (edit mode)
  3. A (deselect all)
  4. RMB vertex nearest camera
  5. Ctrl LMB edge selection button

Notice that all expected edges are selected, but also all top face edges are selected.

Another example with different outcome:

  1. A (deselect all)
  2. LMB vertex section button
  3. RMB vertex beneath vertex in step 4 (bottom edge vertex nearest view)
  4. Ctrl LMB edge selection button

Notice that all edges are selected.

Another example with correct outcome:

  1. A (deselect all)
  2. LMB vertex selection button
  3. RMB vertex on the top-left
  4. Ctrl LMB edge selection button

Notice that the correct edges are selected.

Also, ascending from edge to face mode does not work for any selected edges unless a complete face would be formed with the edges.

Blender 2.64 r51232 for Mac%%%

%%%According to section "Selected elements after switching select mode" in http://wiki.blender.org/index.php/Doc:2.6/Manual/Modeling/Meshes/Selecting, Ctrl LMB on a selection mode (vertex, edge, face) button that is ascendent should select objects that are "touching" the selected object. While this does happen, sometimes extra objects are also selected. For instance, a cube vertex should only have three "touching" edges when ascending. However, selecting a vertex and pressing Ctrl LMB on the edge selection button will sometimes select more than three edges depending on which vertex was selected. Steps to reproduce: 1. Start default cube scene 2. Tab (edit mode) 3. A (deselect all) 4. RMB vertex nearest camera 5. Ctrl LMB edge selection button Notice that all expected edges are selected, but also all top face edges are selected. Another example with different outcome: 6. A (deselect all) 7. LMB vertex section button 8. RMB vertex beneath vertex in step 4 (bottom edge vertex nearest view) 9. Ctrl LMB edge selection button Notice that all edges are selected. Another example with correct outcome: 10. A (deselect all) 11. LMB vertex selection button 12. RMB vertex on the top-left 13. Ctrl LMB edge selection button Notice that the correct edges are selected. Also, ascending from edge to face mode does not work for any selected edges unless a complete face would be formed with the edges. Blender 2.64 r51232 for Mac%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Never heard of this feature...

Campbell: user presses CTRL on the buttons for select modes? That's all a bit dodgy imho. Select mode switching as it was (losing individual vertices if you go to edge, for example) is predictable and acceptable. Hiding button features like this we should try to prevent.%%%

%%%Never heard of this feature... Campbell: user presses CTRL on the buttons for select modes? That's all a bit dodgy imho. Select mode switching as it was (losing individual vertices if you go to edge, for example) is predictable and acceptable. Hiding button features like this we should try to prevent.%%%

%%%I also never heard of this feature, looking into it.%%%

%%%I also never heard of this feature, looking into it.%%%

%%%This is an old feature from 2.4x, bmesh merge broke it.

fixed r52122. also added to tooltip.

%%%

%%%This is an old feature from 2.4x, bmesh merge broke it. fixed r52122. also added to tooltip. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33142
No description provided.