fix [#33142] Ctrl LMB higher selection mode in edit mode sometimes selects extra elements